--- a/local.php.example
+++ b/local.php.example
@@ -2,3 +2,4 @@
 //Rename this file local.php and change the constants to match your Google Account credentials
 define('GOOGLE_EMAIL','someone@gmail.com');
 define('GOOGLE_PASSWD','SomePassword');
+define('ANDROID_DEVICEID','0000000000000000');
