Fixed short tag error

--- a/examples/local.php.example
+++ b/examples/local.php.example
@@ -1,4 +1,4 @@
-<?
+<?php
 //Rename this file local.php and change the constants to match your Google Account credentials
 define('GOOGLE_EMAIL','someone@gmail.com');
 define('GOOGLE_PASSWD','SomePassword');
